[tool.poetry]
name = "whitedot"
version = "1.0.0"
description = "Whitedot is a cryptocurrency designed to be democratized through nodes, a semi-centralized server that cannot tamper with the system, and cryptography."
authors = ["SeafoodStudios <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "whitedot" }]

[tool.poetry.dependencies]
python = ">=3.8, !=3.9.0, !=3.9.1"
requests = ">=2.32.4,<3.0.0"
cryptography = ">=45.0.5,<46.0.0"

[tool.poetry.scripts]
whitedot = "whitedot.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
